<?xml version="1.0"?>
<package format="2">
  <name>segmentation</name>
  <version>1.0.0</version>
  <description>Dynamic object segmentation for SLAM</description>
  
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>